Redirect SecurityManager for Java 24 compat